# efficient-chad-agda

./: .gitignore  Makefile  README.md  chad-cost.agda  chad-cost.agda-lib  chad-preserves-primal.agda  eval-sink-commute.agda  lemmas.agda  setup.agda  spec.agda
arith-solver/: .gitignore  AST.hs  Abstract.hs  AgdaIO.hs  Main.hs  Parser.hs  Reexpress.hs  Tactic.hs  ToAgda.hs  ToSMT.hs  Types.hs  Unnormalise.hs  Util.hs  arith-solver.cabal  prove-via-with.sh  reprove-lemmas.py
arith-solver/AgdaIO/: Monad.hs
spec/: LACM.agda  linear-types.agda
